@@ -13,6 +13,8 @@ pipeline {
     stage('Build') {
       steps {
             bat 'mvn -B -U -e -V clean -gs %M2SETTINGS% -DskipTests package'
+            --add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED
+            
       }
     }
 
